Added intro to c

--- a/index.html
+++ b/index.html
@@ -1049,6 +1049,6 @@ mark {
 </style><title>index</title>
 </head>
 <body class='typora-export'><div class='typora-export-content'>
-<div id='write'  class=''><h1><img src="assets/img/Rlogocircle.png" width="100" height="100"> Raforawesome</h1><hr /><p>&nbsp;</p><p><span>Backend-oriented programmer who (obviously) isn&#39;t great at frontend.  This website is for my blog posts about programming topics and programming in general.</span></p><p>&nbsp;</p><p>&nbsp;</p><h3 id='index'><span>Index:</span></h3><ul><li><h4 id='opinion-stuff'><span>Opinion Stuff</span></h4></li><li><ul><li><a href='why_rust_is_better/index.html'><span>Why Rust is Better</span></a></li></ul></li></ul><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p></div></div>
+<div id='write'  class=''><h1><img src="assets/img/Rlogocircle.png" width="100" height="100"> Raforawesome</h1><hr /><p>&nbsp;</p><p><span>Backend-oriented programmer who (obviously) isn&#39;t great at frontend.  This website is for my blog posts about programming topics and programming in general.</span></p><p>&nbsp;</p><p>&nbsp;</p><h3 id='index'><span>Index:</span></h3><ul><li><h4 id='opinion-stuff'><span>Opinion Stuff</span></h4></li><li><ul><li><a href='why_rust_is_better/index.html'><span>Why Rust is Better</span></a></li></ul></li></ul><ul><li><p><span>Guides</span></p></li><li><ul><li>[<span>Intro to C</span>][intro_to_c/index.html]</li></ul></li></ul><p>&nbsp;</p><p>&nbsp;</p></div></div>
 </body>
 </html>
